css/main.css
html,body{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}
body
{
    overflow-x: hidden;
    font-family:'Dosis';
}
/*Backgrounds*/
.grey-background {
    background-color: #E6E6E6;
}




p{font-family:'Dosis';}


#carrousel{
    width:100%;
}

#first_2 {
    width: 100%;
}

#links_wwO{
    margin-top: 40px;
    margin-left: 3%;
    font-family:'Dosis';
    font-weight:bold;
    font-size: 30pt;
    color: #3d0000;
    display: inline-block;
}

#links_wwO:hover{
color:#ED6F23;
font-family:'Dosis';
text-decoration:none;
font-weight:bold;
}

.wwO-icon {
padding-top: 50px;
padding-left: 0px;
position: relative;

}

.wwO h1{
    font-family:'Dosis';
    font-size: 18pt;
    color:#FFFFFF;
    margin-left: 20%;
}

.wwO h2{
    font-family:'Dosis';
    font-size: 10pt;
    color:#FFFFFF;
    max-height: 50px;
    max-width: 400px;
    margin-left: 20%;
    margin-bottom: 50px;
}

.icon-solutions{
    background: url(../images/icon_solutions.svg) 0 0 no-repeat;
    max-width: 50px;
    margin-left: 42%;
}

.icon-experience{
    background: url(../images/icon_experience.svg) 0 0 no-repeat;
    max-width: 50px;
    margin-left: 17%;
}

.icon-strategy{
    background: url(../images/icon_strategy.svg) 0 0 no-repeat;
    max-width: 50px;
    margin-left: 267px;
}

.icon-quality{
    background: url(../images/icon_quality.svg) 0 0 no-repeat;
    max-width: 50px;
    margin-left: 250px;
}

.project-icon {
    text-align: center;
    background-color: rgb(230, 230, 230);
    cursor: pointer;
}

.project-icon h3 {
    color: #B3473E;
    font-size:  16pt;
    padding-bottom: 20px;
}

.project-icon img{
    padding-top: 20px;
    max-width: 100%;
}

.icon-pocket:hover, .icon-travel:hover, .icon-executive:hover, .icon-sounds:hover {
    background: url(../images/hexagono_hover_concepts.svg) 0 0 no-repeat;
    background-position: center;
    max-width: 100%;
}

.icon-pocket:hover h3, .icon-travel:hover h3, .icon-executive:hover h3, .icon-sounds:hover h3 {
     color: white;
 }

.icon-pocket h3:hover, .icon-travel h3:hover, .icon-executive h3:hover, .icon-sounds h3:hover{
    color: #ED6F23;
    cursor: pointer;
}

.icon-pocket:hover img {
    content: url(../images/icon_pocket_hover.svg);
    max-width: 100%;
}

.icon-travel:hover img {
    content: url(../images/icon_travel_hover.svg);
}


.icon-executive:hover img {
    content: url(../images/icon_executive_hover.svg);
    max-width: 100%;
}

.icon-sounds:hover img {
    content: url(../images/icon_sounds_hover.svg);
    max-width: 100%;
}

.project-icons {
    padding-bottom: 50px;
    padding-top: 50px;
}

.projects-home {
    min-height: 540px;
    background: #E6E6E6 url('../images/img_back_ourprojets_home.svg') left no-repeat;
    position: relative;
}

.projects-home img {
    cursor: pointer;
}

.sounds-box {
    margin-bottom: 20px;
}

.projects-home h1 {
    margin-bottom: 40px;
}

@media(min-width: 1000px) {

    .projects-home h1 {
        position:relative;
        top: 60px;
        color: #B1433A;
        font-size: 30pt;
    }

    .pocket-box {
        position: relative;
        top: 230px;
    }

    .pocket-box:hover img{
        content: url(../images/pocketprojects_hover.svg);
    }

    .pocket-box:hover {
        position: relative;
        top: 130px;
    }

    .travel-box {
        position: relative;
        top: 152px;
    }

    .travel-box:hover img{
        content: url(../images/travelprojects_hover.svg);
    }

    .travel-box:hover {
        position: relative;
        top: 60px;
    }

    .executive-box {
        position: relative;
        top: 70px;
    }

    .executive-box:hover img{
        content: url(../images/executiveprojects_hover.svg);
    }

    .executive-box:hover {
        position: relative;
        top: -20px;
    }

    .sounds-box {
        position: relative;
        top: 0px;
    }

    .sounds-box:hover img{
        content: url(../images/soundsprojects_hover.svg);
    }

    .sounds-box:hover {
        position: relative;
        top: -70px;
    }
}

.container {
    margin-top: 0px !important;
}

/*
*
*ABOUT PAGE
*
*/

.company{
    font-family:'Dosis';
}

.company p{
    padding-top: 10px;
    padding-left: 10%;
    text-align:justify;
}

.company li{
    list-style: none;
    margin-bottom: 15px;
}

.icon_up, .icon_down {
    margin-bottom:30px;
}

.company-sumary {
    margin-bottom: 30px;
}

.company-words {
    margin-right: 20px;
}

.mobile-center {
    margin-left: 0px;
}
.company h1 {
    margin-top: 40px;
    color: #96352F;
}

.brown_bar {
    height: 28px;
    background-color: #3D0000;
}

.team-images {
    margin-bottom: 10px;
}

.team-images p {
    margin:0px;
}

.team-content {
    background-image: rgba(235,235,235,1);
    background-image: -webkit-linear-gradient(top, #96342f 0%,rgb(150,52,47) 52%,#3d0000 52%,#3d0000 94%);
    background-image: -moz-linear-gradient(top, #96342f 0%,rgb(150,52,47) 52%,#3d0000 52%,#3d0000 94%);
    background-image: -o-linear-gradient(top, #96342f 0%,rgb(150,52,47) 52%,#3d0000 52%,#3d0000 94%);
    background-image: linear-gradient(top, #96342f 0%,rgb(150,52,47) 52%,#3d0000 52%,#3d0000 94%);
}

.team-content-up {
    background: url(../images/img_back_meet_team_about.svg) left no-repeat;
}

.team-content-down {
    background: #621411;
}

.team h1 {
    margin-top: 40px;
    color: #ffffff;
    padding-bottom: 80px;
    text-align: left;
}

.team img {
    padding-right: 10px;
    padding-bottom: 15px;
    max-width: 100%;
    margin-bottom: 10px;
}

.team embed {
    padding-right: 10px;
    padding-bottom: 15px;
    max-width: 100%;
    margin-bottom: 10px;
}

.team {
    text-align: center;
}

.team p {
    color: #ffffff;
    font-size: 16px;
}

.team-scroll ol{
    position: static;
    padding-left: 80px;
}

.team-indicators li.active{
  background-color: #ED6F23;
}

.organization-chart .container h1{
    color: #3D0000;
    margin-bottom: 40px;
}


.chart-icon-ceo, .chart-icon-design, .chart-icon-leaders, .chart-icon-quality{
    margin-bottom: 50px;
}

.hover-orange:hover {
    color: #ED6F23 !important;
    cursor: pointer;
}


@media (min-width: 1000px) {
    .organization-chart .container h1{
        position:relative;
        top: 40px;
    }

    .chart-icons {
        position: relative;
    }

    .chart-icon-ceo {
        position: relative;
        top: 230px;
    }

    .chart-icon-design {
        position: relative;
        top: 152px;
    }

    .chart-icon-leaders {
        position: relative;
        top: 70px;
    }

    .chart-icon-quality {
        position: relative;
        top: 0px;
    }

    .chart-icon-ceo img:hover {
        content: url(../images/icon_ceo_back_hover.svg);
        position: relative;
        top: -90px;
    }

    .chart-icon-design img:hover {
        content: url(../images/icon_designdepart_back_hover.svg);
        position: relative;
        top: -90px;
    }

    .chart-icon-leaders img:hover {
        content: url(../images/icon_leaders_back_hover.svg);
        position: relative;
    }

    .chart-icon-quality img:hover {
        content: url(../images/icon_qualitydepart_back_hover.svg);
        position: relative;
    }
}

.organization-chart {
    min-height: 540px;
    background: #E6E6E6 url('../images/img_back_ourprojets_home.svg') left no-repeat;
}

.footer-icon-L {
padding-top: 50px;
padding-left: 0px;
text-align: right;
}

.icon-moksie{
    background: url(../images/moksie_polity2014.png) 0 0 no-repeat;
    max-width: 112px;
    margin-left: 28%;
}

#links_fo{
    margin-right: 15px;
    font-family:'Dosis';
    color: #FFFFFF;
    font-size:9pt;
    font-weight:bold;
}

#linksList{
    margin-top: 75px;
    margin-left: 22%;
}

#linksList li
{
display: inline;
list-style-type: none;
padding-right: 20px;
}

#linksList a
{
text-decoration: inherit;
}

#linksList a:hover
{
color: #ED6F23;
}

.footer-icon{
    padding-top: 16px;
    padding-left: 20px;
    float: left;
}

.icon-adress{
    background: url(../images/icon_adress.svg) 0 0 no-repeat;
    max-width: 20px;
    margin-top: 72px;
}

.icon-phone{
    background: url(../images/icon_phone.svg) 0 0 no-repeat;
    max-width: 20px;
    margin-top: 5px;
}

.icon-mail{
    background: url(../images/icon_mail.svg) 0 0 no-repeat;
    max-width: 20px;
    margin-top: 5px;
}

.adress{
    color: #FFFFFF;
    min-width: 400px;
    max-height: 20px;
    padding-top: 72px;
}

.phone{
    color: #FFFFFF;
    min-width: 200px;
    max-height: 20px;
    padding-top: 5px;
}

.mail{
    color: #FFFFFF;
    min-width: 200px;
    max-height: 20px;
    padding-top: 3px;
}

.logo_team{
    display: block;
    margin-left: 30px;
    margin-right: auto;
}

.texto p{
    margin-bottom: 0;
}

.texto {
    margin-top: 10px;
    margin-left: 30px;
    margin-bottom: 10px;
    font-family: Dosis 600;
    color: #3D0000;
}

.logo_company{
    display: block;
    margin-top: 4%;
    margin-bottom: 20px;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    height: auto;
}
.projects_last{
    min-height:180px;
    background-color: #E2E2E2;
}
#project_first{
    background-color: #C5C5C5;
    width: 100%;
}
#project_last{
    background-color: #E2E2E2;
    width: 100%;
}
#page_footer{
    min-height: 216px;
    background-color: #3D0000;
}

#home_links .split{
    float: left;
    position: relative;
}

.wwO-content-up {
   background: #B75149;
}

.wwO-background-img{
    background: url("../images/img_back_conceitos_home.svg") 0 0 no-repeat;
    background-position: center;    
}
.wwO-background-img2{
    background: url("../images/img_back_conceitos_home.svg") center bottom no-repeat;
    background-position: center;    
}

.wwO-content-down {
    background-color: #C63F36;
}

#wwOcss{
    width: 100%;
    padding: 0;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    border: none;
    background: url("../images/what_we_offer_background.png") no-repeat;
    -moz-border-radius: 0px;
    -webkit-border-radius: 0px;
    border-radius: 0px;
    background-size: cover;
    min-height: 500px;
}

#project_name{
    color: #8B2E29;
}

#footercss{
    width: 100%;
    padding: 0;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    border: none;
    background-color: #3D0000;
    -moz-border-radius: 0px;
    -webkit-border-radius: 0px;
    border-radius: 0px;
}
.separator{
    height:20px;
    background-color: #471313;
}
.background_one{
    min-height: 450px;
    background: url(../images/img_back_project_itsector.svg) -100px -300px no-repeat;
}
.background_two{
    min-height: 450px;
    background: url(../images/img_back_project_opt.svg) 300px -300px no-repeat;
}
.background_three{
    min-height: 450px;
    background: url(../images/img_back_project_itsector.svg) -100px -300px no-repeat;
}
.background_four{
    min-height: 450px;
    background: url(../images/img_back_project_itsector.svg) -100px -300px no-repeat;
}
.row_padding{
    padding-top: 70px;
}
.row_projects_padding{
    padding-top: 30px;
}

/*CONTACTS*/

.morada p {
    padding-left: 50px;
    margin: 0px;
}

.morada h1 {
    margin-bottom: 40px;
}

.docentes {
    padding-top: 100px;
    padding-bottom: 100px;
    background: #E6E6E6 url('../images/img_back_docentes_contacts.svg') left no-repeat;
}

.find_us {
    padding-top: 100px;
    padding-bottom: 100px;
}

.find_us img {
    max-width: 100%;
}
.docentes h1, .find_us h1 {
    color: #B1433A;
    font-size: 30pt;
    font-family: Dosis Semi-Bold 600;
}

.docentes-photo img {
    margin-top: 20px;
    max-width: 100%;
}

.docentes-nomes {
    padding-left: 50px;
}

.docentes-nomes p {
    margin-top: 20px;
    margin-bottom: 0px;
}

#bordered_img{
    border-width: 5px;
     border-style:solid;
    border-color:white;
}

.contact-name {
    margin-top: 0px !important;
}

